--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,63 @@
 /* ini File CSS */
+
+main {
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 64px;
+    padding-bottom: 64px;
+}
+
+.main-title {
+    text-align: center;
+}
+
+.main-section-introduction {
+    padding: 16px;
+    background-color: aliceblue;
+    border-radius: 5px;
+}
+
+section {
+    display: block;
+    unicode-bidi: isolate;
+}
+
+textarea {
+    width: 75%;
+    resize: none;
+}
+
+.btn-convert,
+.btn-reset,
+.btn-reverse {
+    padding: 10px;
+    width: 150px;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.btn-convert:hover,
+.btn-reset:hover,
+.btn-reverse:hover {
+    opacity: 0.8;
+    transition-delay: 100ms;
+}
+
+.btn-convert:active,
+.btn-reset:active,
+.btn-reverse:active {
+    padding-top: 5px;
+}
+
+.btn-convert {
+    background-color: green;
+}
+
+.btn-reset {
+    background-color: orange;
+}
+
+.btn-reverse {
+    background-color: darkblue;
+}
